--- a/user_config.DS3615xs.json
+++ b/user_config.DS3615xs.json
@@ -1,12 +1,11 @@
 {
-  "extra_cmdline": {
-    "vid": "0x46f4",
-    "pid": "0x0001",
-    "sn": "1740LWN002032",
-    "mac1": "00113278D8F1"
-  },
-  "synoinfo": {
-    "supportsystemperature": "no",
-    "supportsystempwarning": "no"
-  }
+    "extra_cmdline": {
+        "pid": "0x0001",
+        "vid": "0x46f4",
+        "sn": "1234XXX123",
+        "mac1": "XXYYXXYYXXYY"
+    },
+    "synoinfo": {},
+    "ramdisk_copy": {},
+    "extensions": []
 }
